--- a/index.html
+++ b/index.html
@@ -1788,9 +1788,34 @@
         <div class="container">
             <div class="section-header">
                 <h2>*** K-BioX 글로벌 학술/네트워크 단톡방 모음 ***</h2>
-                <p>실시간 정보 공유와 네트워킹을 위한 다양한 카톡방에 참여하세요</p>
+                <p>실시간 정보 공유와 네트워킹을 위한 다양한 카톡방에 참여하세요<br>
+                <strong>디지털웰니스 협회</strong>와 <strong>에코마이스</strong>가 함께하는 K-BioX 플랫폼의 글로벌 네트워크</p>
             </div>
             <div class="chat-rooms-grid">
+                <div class="chat-room-banner featured-partner">
+                    <div class="banner-icon">
+                        <i class="fas fa-heart"></i>
+                    </div>
+                    <div class="banner-content">
+                        <h3>디지털웰니스 협회</h3>
+                        <p>디지털 헬스케어와 웰니스 기술의 융합을 통한 혁신적인 건강 솔루션 개발 및 글로벌 네트워킹</p>
+                        <span class="member-count">협회 파트너</span>
+                    </div>
+                    <a href="#" class="join-btn">협회 소개</a>
+                </div>
+
+                <div class="chat-room-banner featured-partner">
+                    <div class="banner-icon">
+                        <i class="fas fa-leaf"></i>
+                    </div>
+                    <div class="banner-content">
+                        <h3>에코마이스</h3>
+                        <p>환경 친화적 바이오 기술과 지속가능한 생명과학 솔루션을 통한 미래 지향적 생태계 구축</p>
+                        <span class="member-count">전략 파트너</span>
+                    </div>
+                    <a href="#" class="join-btn">파트너 소개</a>
+                </div>
+
                 <div class="chat-room-banner">
                     <div class="banner-icon">
                         <i class="fab fa-slack"></i>
